# docbuddy

./: .env.example  .gitignore  .sesskey  CONTRIBUTING.md  README.md  atari_docs  cleanup.py  env-template.txt  pyproject.toml  rename_script.py  requirements.txt  setup.py  update_templates.py  update_tests.py
atari_assist/: __init__.py  config.py  core.py  main.py  utils.py
atari_assist/cli/: __init__.py  main.py
atari_assist/core/: __init__.py  document_retrieval.py  prompt_builder.py  query_processor.py
atari_assist/llm/: __init__.py  anthropic_llm.py  gemini_llm.py  groq_llm.py  ollama_llm.py  openai_llm.py
atari_assist/web/: __init__.py  app.py  handlers.py
docbuddy/: __init__.py
docbuddy/core/: document_retrieval.py
docs/interfaces/: cli.md  python_api.md  tui.md  web.md
tests/: test_basic.py  test_cli.py  test_document_retrieval.py  test_llm.py  test_prompt_builder.py  test_web.py
