[project]
name = "docbuddy"
version = "0.1.0"
description = "CLI and web assistant for document collections using LLMs and RAG"
authors = ["DocBuddy Contributors <you@example.com>"]
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
    "openai",
    "requests",
    "anthropic",
    "google-generativeai",
    "groq",
    "python-fasthtml",
    "python-dotenv",
    "textual>=0.52.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy"
]
embeddings = [
    "numpy",
    "sentence-transformers"
]
full = [
    "numpy",
    "sentence-transformers",
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy"
]

[project.scripts]
docbuddy = "docbuddy.cli.main:app"

[tool.uv]
format = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

